# ChangeLog for dev-dotnet/ikvm
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/ikvm/ChangeLog,v 1.5 2005/05/13 01:59:24 latexer Exp $

*ikvm-0.14.0.1 (13 May 2005)

  13 May 2005; Peter Johanson <latexer@gentoo.org> +files/script-template,
  ikvm-0.8.0.0.ebuild, +ikvm-0.14.0.1.ebuild:
  Bump, and mark 0.8.0.0 stable.

  10 Mar 2005; Peter Johanson <latexer@gentoo.org> ikvm-0.8.0.0.ebuild:
  mono moved from dev-dotnet -> dev-lang

  18 Oct 2004; David Holm <dholm@gentoo.org> ikvm-0.8.0.0.ebuild:
  Added to ~ppc.

*ikvm-0.8.0.0 (30 Jun 2004)

  30 Jun 2004; Peter Johanson <latexer@gentoo.org> +metadata.xml,
  +ikvm-0.8.0.0.ebuild:
  Initial commit. Version that goess with mono-1.0
