@@ -2,6 +2,9 @@ MD5 6c34fb4478ac9745fd393605440e0f34 ChangeLog 758
 MD5 a60fdfbce7c7cfc52187ff86a7f8bbf8 metadata.xml 222
 MD5 859578177e97864b75b11f70c5dde8b0 ikvm-0.8.0.0.ebuild 659
 MD5 d60e867308915679a4e42bff40977867 ikvm-0.14.0.1.ebuild 907
+MD5 47c167543676c96130994855d4653bf9 ikvm-0.14.0.1-r1.ebuild 1026
 MD5 e80b63a8abf009a70f69a4d4037345fe files/digest-ikvm-0.8.0.0 65
 MD5 00c7d35cf8e7897b6bd3cc9fb54bcffc files/digest-ikvm-0.14.0.1 130
 MD5 4663f47604a2844330031fbdad711339 files/script-template 53
+MD5 11d8b925e6c32a7c4adf28e967c4b05e files/ikvm.pc.in 255
+MD5 00c7d35cf8e7897b6bd3cc9fb54bcffc files/digest-ikvm-0.14.0.1-r1 130
