@@ -1,0 +1,2 @@
+MD5 41aac88c0e0a6f148af8ad378eb60d69 ikvm-0.14.0.1.zip 4220553
+MD5 036c23aec7cb53a43b7b9dc63a92fbbe classpath-0.15.tar.gz 5564571
