@@ -1,0 +1,9 @@
+prefix=/usr
+exec_prefix=${prefix}
+libdir=${prefix}/lib
+
+
+Name: IKVM.NET
+Description: An implementation of Java for Mono and the Microsoft .NET Framework.
+Version: @VERSION@
+Libs: -r:${libdir}/ikvm/IKVM.Runtime.dll -r:${libdir}/ikvm/IKVM.GNU.Classpath.dll
