@@ -1,6 +1,12 @@
 # ChangeLog for dev-dotnet/ikvm
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/ikvm/ChangeLog,v 1.5 2005/05/13 01:59:24 latexer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/ikvm/ChangeLog,v 1.6 2005/05/18 18:02:08 latexer Exp $
+
+*ikvm-0.14.0.1-r1 (18 May 2005)
+
+  18 May 2005; Peter Johanson <latexer@gentoo.org> +files/ikvm.pc.in,
+  +ikvm-0.14.0.1-r1.ebuild:
+  Revision bump to include pkg-config file needed by new monodevelop.
 
 *ikvm-0.14.0.1 (13 May 2005)
 
